Fixed spacing issues on race series single post

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -2617,7 +2617,7 @@ body.subpage.single {
 		}
 	}
 	.legend-for-mobile {
-		display: block;
+		display: none;
 		width: 100%;
 		float: left;
 		// border: 1px dotted $red;
